# markdown-parser

./: .gitignore  README.md  markdown_parser_test
module/: README.md
module/c_src/: libmarkdown_parser.dylib  markdown_parser.c
module/c_src/lib/: markdown_parser.h
module/c_src/m_html/: html_builder.c  html_builder.h
module/c_src/m_html/attrs/: html_attributes.c  html_attributes.h
module/c_src/m_html/blocks/: html_blocks.c  html_blocks.h
module/c_src/m_html/core/: html_core.c  html_core.h
module/c_src/m_html/elements/: html_elements.c  html_elements.h
module/c_src/m_html/escape/: html_escape.c  html_escape.h
module/c_src/m_html/inline/: html_inline.c  html_inline.h
module/c_src/m_html/tags/: html_tags.c  html_tags.h
module/c_src/m_md/: markdown_transformer.c  markdown_transformer.h
module/c_src/m_md/blocks/: md_blocks.c  md_blocks.h  md_table.c  md_table.h
module/c_src/m_md/document/: md_document.c  md_document.h
module/c_src/m_md/inline/: md_inline.c  md_inline.h  md_inline_links.c  md_inline_links.h  md_inline_styles.c  md_inline_styles.h
module/c_src/m_md/shared/: md_shared.c  md_shared.h
module/c_src/m_str/: string_buffer.c  string_buffer.h
module/python/: __init__.py  _native.py  parser.py
tests/: CMakeLists.txt
tests/C/: markdown_parser_test  test_main.c
tests/python/: test_parser.py
tests/samples/: example.css  example.md
